--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,108 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+/* BODY */
+body {
+	width: 880px;
+	margin: 0 auto;
+}
+
+/* NAV BAR */
+.container-nav {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+	.container-nav nav {
+		flex-grow: 1;
+		display:flex;
+		justify-content: space-between;
+		align-items: center;
+
+		padding-right: 50px;
+	}
+
+/* HEADER */
+.container-header {
+	display:flex;
+	flex-direction: row;
+
+	margin-bottom: 50px;
+}
+
+	.container-header-left {
+		display: flex;
+		flex-direction: column;
+		
+		justify-content: center;
+		align-items: center;
+	}
+
+		.container-header-left h1 {
+			text-align: center;
+
+			font-size: 65px;
+		}
+
+		.container-header-left p {
+			padding: 10px 30px 10px 30px;
+			
+			border: 1px solid black;
+		}
+
+/* CONTENT 1 */
+.container-content-1 {
+	display:flex;
+	flex-direction: row;
+
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+	.content-1-left {
+		width: 50%;
+	}
+
+	.content-1-right {
+		width: 50%;
+	}
+
+/* CONTENT 2 */
+.container-content-2 {
+	display:flex;
+	flex-direction: row;
+
+	margin-top:50px;
+	margin-bottom: 50px;
+}
+
+	.content-2-left {
+		width: 33%;
+	}
+
+	.content-2-middle {
+		width: 33%;
+	}
+
+	.content-2-right {
+		width: 33%;	
+	}
+
+/* ADDRESS */
+footer address {
+	margin-top: 50px;
+}
+
+/* LEGAL */
+
+.legal {
+	display: flex;
+	justify-content: center;
+
+	margin-bottom: 75px;
+
+}
